--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ textarea {
 .sudV { border-bottom: 3px solid green; }
 .estV { border-right: 3px solid green; }
 .ouestV { border-left: 3px solid green; }
-
+.entree { width: 64px; border: 1px dashed lightgray; border-radius: 4px; }
 .jeton { width: 32px; height: 32px; 
   border-radius: 50%; 
     margin: 5px;
