--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,7 @@ textarea {
 .estV { border-right: 3px solid green; }
 .ouestV { border-left: 3px solid green; }
 .entree { width: 64px; border: 1px dashed lightgray; border-radius: 4px; }
+.premisse { width: 16em; border: 2px inset blue; }
 .jeton { width: 32px; height: 32px; 
   border-radius: 50%; 
     margin: 5px;
